# sign_language_recognition

./: README.md
usb_slr/: pyproject.toml
usb_slr/src/slr/: config.py  main.py
usb_slr/src/slr/core/: __init__.py
usb_slr/src/slr/data_processing/: __init__.py  image_parser.py  video_converter.py
usb_slr/src/slr/dataset_manager/: dataset_managers.py  youtube_downloader.py
usb_slr/src/slr/local_files/: __init__.py  file_manager.py
usb_slr/src/slr/model/: __init__.py  data_ingestor.py  frame_classifier_model.py  labels.py  lstm_model.py  skeleton_based_action_recognition.py  stgcn_model.py  trainer.py  trajectory_map_lstm_model.py  trajectory_map_lstm_model_mobilenet.py  trajectory_map_model.py  utils.py
usb_slr/src/slr/parser/: __init__.py  real_time_parser.py
usb_slr/tests/: test_usb_slr.py
usb_slr/util_scripts/: compute_correlation_joint_label.py  count_available_instances_msasl.py  count_stored_samples_per_class.py  generate_experiments_data.py  generate_plot_from_csv.py  generate_trajectory_maps_from_dataset.py  measure_distance_between_images.py
