[tool.poetry]
name = "usb_slr"
version = "0.1.0"
description = ""
authors = ["Luis Díaz <ldiazn98@gmail.com>"]

packages = [
    { include = "slr", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.10"
pytube = "^12.0.0"
click = "^8.1.2"
dynaconf = "^3.1.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
slr = "slr.main:usb_slr"