[tool.poetry]
name = "usb_slr"
version = "0.1.0"
description = ""
authors = ["Luis Díaz <ldiazn98@gmail.com>"]

packages = [
    { include = "slr", from = "src" },
]

[tool.poetry.dependencies]
python = "~3.10 || ~3.7.1 || ~3.8 || ~3.9"
pytube = "^12.0.0"
click = "^8.1.2"
dynaconf = "^3.1.7"
typing-extensions = "^4.1.1"
termcolor = "^1.1.0"
tqdm = "^4.64.0"
tensorflow = "^2.8.0"
tensorflow-gpu = "^2.8.0"
opencv-python = "^4.5.5"
mediapipe = "^0.8.9"
scipy = "1.7.3"
matplotlib = "^3.5.1"
pandas = "1.3.5"
sklearn = "^0.0"
keras-utils = "^1.0.13"
torch = "^1.11.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
jupyter = "^1.0.0"
notebook = "^6.4.11"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
slr = "slr.main:usb_slr"